--- a/u-boot/Makefile
+++ b/u-boot/Makefile
@@ -824,6 +824,14 @@ xwrt_mk-v0201: ar934x_common lsdk_kernel
 	@$(call define_add,CFG_AG7240_NMACS,2)
 	@$(MKCONFIG) -a db12x mips mips db12x ar7240 ar7240
 
+xwrt_m-ap300g: ar934x_common lsdk_kernel
+	@$(call config_init,XWRT M-AP300G,m-ap300g,16,17,1,QCA_AR9344_SOC)
+	@$(call define_add,CONFIG_FOR_XWRT_M_AP300G,1)
+	@$(call define_add,CFG_ATHRS27_PHY,1)
+	@$(call define_add,CFG_AG7240_NMACS,2)
+	@$(call define_add,CFG_DUAL_PHY_SUPPORT,1)
+	@$(MKCONFIG) -a db12x mips mips db12x ar7240 ar7240
+
 yuncore_ap90q: qca953x_common
 	@$(call config_init,YunCore AP90Q,ap90q,16,17,1,QCA_QCA9531_SOC)
 	@$(call define_add,CONFIG_FOR_YUNCORE_AP90Q,1)
